--- a/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises.ipynb
@@ -532,9 +532,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "py_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -546,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
