--- a/02_Filtering_&_Sorting/Euro12/Exercises.ipynb
+++ b/02_Filtering_&_Sorting/Euro12/Exercises.ipynb
@@ -1718,9 +1718,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "py_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1732,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
